@@ -18,6 +18,7 @@ package org.apache.kafka.connect.runtime;
 
 import org.apache.kafka.clients.consumer.Consumer;
 import org.apache.kafka.common.TopicPartition;
+import org.apache.kafka.common.metrics.PluginMetrics;
 import org.apache.kafka.connect.errors.IllegalWorkerStateException;
 import org.apache.kafka.connect.sink.ErrantRecordReporter;
 import org.apache.kafka.connect.sink.SinkTaskContext;
@@ -26,10 +27,10 @@ import org.apache.kafka.connect.storage.ClusterConfigState;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
@@ -116,7 +117,7 @@ public class WorkerSinkTaskContext implements SinkTaskContext {
             if (sinkTask.shouldPause()) {
                 log.debug("{} Connector is paused, so not pausing consumer's partitions {}", this, partitions);
             } else {
-                consumer.pause(Arrays.asList(partitions));
+                consumer.pause(List.of(partitions));
                 log.debug("{} Pausing partitions {}. Connector is not paused.", this, partitions);
             }
         } catch (IllegalStateException e) {
@@ -130,12 +131,13 @@ public class WorkerSinkTaskContext implements SinkTaskContext {
             throw new IllegalWorkerStateException("SinkTaskContext may not be used to resume consumption until the task is initialized");
         }
         try {
-            pausedPartitions.removeAll(Arrays.asList(partitions));
+            List<TopicPartition> partitionList = List.of(partitions);
+            partitionList.forEach(pausedPartitions::remove);
             if (sinkTask.shouldPause()) {
-                log.debug("{} Connector is paused, so not resuming consumer's partitions {}", this, partitions);
+                log.debug("{} Connector is paused, so not resuming consumer's partitions {}", this, partitionList);
             } else {
-                consumer.resume(Arrays.asList(partitions));
-                log.debug("{} Resuming partitions: {}", this, partitions);
+                consumer.resume(partitionList);
+                log.debug("{} Resuming partitions: {}", this, partitionList);
             }
         } catch (IllegalStateException e) {
             throw new IllegalWorkerStateException("SinkTasks may not resume partitions that are not currently assigned to them.", e);
@@ -163,6 +165,11 @@ public class WorkerSinkTaskContext implements SinkTaskContext {
     @Override
     public ErrantRecordReporter errantRecordReporter() {
         return sinkTask.workerErrantRecordReporter();
+    }
+
+    @Override
+    public PluginMetrics pluginMetrics() {
+        return sinkTask.pluginMetrics();
     }
 
     @Override
