@@ -17,6 +17,8 @@
 
 package org.apache.kafka.connect.runtime.isolation;
 
+import org.apache.kafka.connect.storage.Converter;
+
 import org.junit.jupiter.api.io.TempDir;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -24,13 +26,14 @@ import org.junit.jupiter.params.provider.MethodSource;
 import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.HashSet;
+import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 
@@ -46,7 +49,7 @@ public class PluginScannerTest {
     @ParameterizedTest
     @MethodSource("parameters")
     public void testScanningEmptyPluginPath(PluginScanner scanner) {
-        PluginScanResult result = scan(scanner, Collections.emptySet());
+        PluginScanResult result = scan(scanner, Set.of());
         assertTrue(result.isEmpty());
     }
 
@@ -65,7 +68,7 @@ public class PluginScannerTest {
     public void testScanningInvalidUberJar(PluginScanner scanner) throws Exception {
         File newFile = new File(pluginDir, "invalid.jar");
         newFile.createNewFile();
-        PluginScanResult result = scan(scanner, Collections.singleton(pluginDir.toPath()));
+        PluginScanResult result = scan(scanner, Set.of(pluginDir.toPath()));
         assertTrue(result.isEmpty());
     }
 
@@ -77,14 +80,14 @@ public class PluginScannerTest {
         newFile = new File(newFile, "invalid.jar");
         newFile.createNewFile();
 
-        PluginScanResult result = scan(scanner, Collections.singleton(pluginDir.toPath()));
+        PluginScanResult result = scan(scanner, Set.of(pluginDir.toPath()));
         assertTrue(result.isEmpty());
     }
 
     @ParameterizedTest
     @MethodSource("parameters")
     public void testScanningNoPlugins(PluginScanner scanner) {
-        PluginScanResult result = scan(scanner, Collections.singleton(pluginDir.toPath()));
+        PluginScanResult result = scan(scanner, Set.of(pluginDir.toPath()));
         assertTrue(result.isEmpty());
     }
 
@@ -94,7 +97,7 @@ public class PluginScannerTest {
         File newFile = new File(pluginDir, "my-plugin");
         newFile.mkdir();
 
-        PluginScanResult result = scan(scanner, Collections.singleton(pluginDir.toPath()));
+        PluginScanResult result = scan(scanner, Set.of(pluginDir.toPath()));
         assertTrue(result.isEmpty());
     }
 
@@ -112,7 +115,7 @@ public class PluginScannerTest {
             Files.copy(source, pluginPath.resolve(source.getFileName()));
         }
 
-        PluginScanResult result = scan(scanner, Collections.singleton(pluginDir.toPath()));
+        PluginScanResult result = scan(scanner, Set.of(pluginDir.toPath()));
         Set<String> classes = new HashSet<>();
         result.forEach(pluginDesc -> classes.add(pluginDesc.className()));
         Set<String> expectedClasses = new HashSet<>(TestPlugins.pluginClasses());
@@ -135,6 +138,18 @@ public class PluginScannerTest {
                 TestPlugins.pluginPath(TestPlugins.TestPlugin.READ_VERSION_FROM_RESOURCE_V1));
         assertFalse(versionedPluginResult.isEmpty());
         versionedPluginResult.forEach(pluginDesc -> assertEquals("1.0.0", pluginDesc.version()));
+    }
+
+    @ParameterizedTest
+    @MethodSource("parameters")
+    public void testClasspathPluginIsAlsoLoadedInIsolation(PluginScanner scanner) {
+        Set<Path> isolatedClassPathPlugin = TestPlugins.pluginPath(TestPlugins.TestPlugin.CLASSPATH_CONVERTER);
+        PluginScanResult result = scan(scanner, isolatedClassPathPlugin);
+        Optional<PluginDesc<Converter>> pluginDesc = result.converters().stream()
+            .filter(desc -> desc.className().equals(TestPlugins.TestPlugin.CLASSPATH_CONVERTER.className()))
+            .findFirst();
+        assertTrue(pluginDesc.isPresent());
+        assertInstanceOf(PluginClassLoader.class, pluginDesc.get().loader());
     }
 
     private PluginScanResult scan(PluginScanner scanner, Set<Path> pluginLocations) {
