@@ -16,11 +16,19 @@
  */
 package org.apache.kafka.connect.runtime.rest;
 
+import org.apache.kafka.common.MetricName;
 import org.apache.kafka.common.config.AbstractConfig;
+import org.apache.kafka.common.metrics.Gauge;
+import org.apache.kafka.common.metrics.KafkaMetric;
+import org.apache.kafka.common.metrics.Monitorable;
+import org.apache.kafka.common.metrics.PluginMetrics;
 import org.apache.kafka.common.utils.LogCaptureAppender;
 import org.apache.kafka.connect.rest.ConnectRestExtension;
+import org.apache.kafka.connect.rest.ConnectRestExtensionContext;
 import org.apache.kafka.connect.runtime.Herder;
+import org.apache.kafka.connect.runtime.MockConnectMetrics;
 import org.apache.kafka.connect.runtime.isolation.Plugins;
+import org.apache.kafka.connect.runtime.isolation.PluginsTest;
 import org.apache.kafka.connect.runtime.rest.entities.LoggerLevel;
 
 import com.fasterxml.jackson.core.type.TypeReference;
@@ -52,22 +60,24 @@ import java.io.IOException;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 
 import jakarta.ws.rs.core.MediaType;
 
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.reset;
 
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.STRICT_STUBS)
@@ -85,6 +95,7 @@ public class ConnectRestServerTest {
     @BeforeEach
     public void setUp() {
         httpClient = HttpClients.createMinimal();
+        doReturn(new MockConnectMetrics()).when(herder).connectMetrics();
     }
 
     @AfterEach
@@ -118,6 +129,9 @@ public class ConnectRestServerTest {
 
     @Test
     public void testAdvertisedUri() {
+        // Clear stubs not needed by this test
+        reset(herder);
+
         // Advertised URI from listeners without protocol
         Map<String, String> configMap = new HashMap<>(baseServerProps());
         configMap.put(RestServerConfig.LISTENERS_CONFIG, "http://localhost:8080,https://localhost:8443");
@@ -197,7 +211,7 @@ public class ConnectRestServerTest {
         doReturn(KAFKA_CLUSTER_ID).when(herder).kafkaClusterId();
         doReturn(plugins).when(herder).plugins();
         expectEmptyRestExtensions();
-        doReturn(Arrays.asList("a", "b")).when(herder).connectors();
+        doReturn(List.of("a", "b")).when(herder).connectors();
 
         server = new ConnectRestServer(null, restClient, configMap);
         server.initializeServer();
@@ -240,7 +254,7 @@ public class ConnectRestServerTest {
         doReturn(KAFKA_CLUSTER_ID).when(herder).kafkaClusterId();
         doReturn(plugins).when(herder).plugins();
         expectEmptyRestExtensions();
-        doReturn(Arrays.asList("a", "b")).when(herder).connectors();
+        doReturn(List.of("a", "b")).when(herder).connectors();
 
         server = new ConnectRestServer(null, restClient, configMap);
         server.initializeServer();
@@ -262,8 +276,8 @@ public class ConnectRestServerTest {
         doReturn(KAFKA_CLUSTER_ID).when(herder).kafkaClusterId();
         doReturn(plugins).when(herder).plugins();
         expectEmptyRestExtensions();
-        doReturn(Collections.emptyList()).when(herder).setWorkerLoggerLevel(logger, loggingLevel);
-        doReturn(Collections.singletonMap(logger, new LoggerLevel(loggingLevel, lastModified))).when(herder).allLoggerLevels();
+        doReturn(List.of()).when(herder).setWorkerLoggerLevel(logger, loggingLevel);
+        doReturn(Map.of(logger, new LoggerLevel(loggingLevel, lastModified))).when(herder).allLoggerLevels();
 
         server = new ConnectRestServer(null, restClient, configMap);
         server.initializeServer();
@@ -280,7 +294,7 @@ public class ConnectRestServerTest {
         Map<String, Object> expectedLogger = new HashMap<>();
         expectedLogger.put("level", loggingLevel);
         expectedLogger.put("last_modified", lastModified);
-        Map<String, Map<String, Object>> expectedLoggers = Collections.singletonMap(logger, expectedLogger);
+        Map<String, Map<String, Object>> expectedLoggers = Map.of(logger, expectedLogger);
         Map<String, Map<String, Object>> actualLoggers = mapper.readValue(responseStr, new TypeReference<>() { });
         assertEquals(expectedLoggers, actualLoggers);
     }
@@ -375,6 +389,44 @@ public class ConnectRestServerTest {
         checkCustomizedHttpResponseHeaders(headerConfig, expectedHeaders);
     }
 
+    static final class MonitorableConnectRestExtension extends PluginsTest.TestConnectRestExtension implements Monitorable {
+
+        private boolean called = false;
+        private static MetricName metricName;
+
+        @Override
+        public void register(ConnectRestExtensionContext restPluginContext) {
+            called = true;
+        }
+
+        @Override
+        public void withPluginMetrics(PluginMetrics metrics) {
+            metricName = metrics.metricName("name", "description", new LinkedHashMap<>());
+            metrics.addMetric(metricName, (Gauge<Boolean>) (config, now) -> called);
+        }
+    }
+
+    @Test
+    public void testMonitorableConnectRestExtension() {
+        Map<String, String> configMap = new HashMap<>(baseServerProps());
+        configMap.put(RestServerConfig.REST_EXTENSION_CLASSES_CONFIG, MonitorableConnectRestExtension.class.getName());
+
+        doReturn(plugins).when(herder).plugins();
+        doReturn(List.of(new MonitorableConnectRestExtension())).when(plugins).newPlugins(any(), any(), eq(ConnectRestExtension.class));
+
+        server = new ConnectRestServer(null, restClient, configMap);
+        server.initializeServer();
+        server.initializeResources(herder);
+
+        Map<MetricName, KafkaMetric> metrics = herder.connectMetrics().metrics().metrics();
+        assertTrue(metrics.containsKey(MonitorableConnectRestExtension.metricName));
+        assertTrue((boolean) metrics.get(MonitorableConnectRestExtension.metricName).metricValue());
+
+        server.stop();
+        metrics = herder.connectMetrics().metrics().metrics();
+        assertFalse(metrics.containsKey(MonitorableConnectRestExtension.metricName));
+    }
+
     private void checkCustomizedHttpResponseHeaders(String headerConfig, Map<String, String> expectedHeaders)
             throws IOException  {
         Map<String, String> configMap = baseServerProps();
@@ -384,7 +436,7 @@ public class ConnectRestServerTest {
         doReturn(KAFKA_CLUSTER_ID).when(herder).kafkaClusterId();
         doReturn(plugins).when(herder).plugins();
         expectEmptyRestExtensions();
-        doReturn(Arrays.asList("a", "b")).when(herder).connectors();
+        doReturn(List.of("a", "b")).when(herder).connectors();
 
         server = new ConnectRestServer(null, restClient, configMap);
         server.initializeServer();
@@ -410,7 +462,7 @@ public class ConnectRestServerTest {
 
     private String executePut(URI serverUrl, String endpoint, String jsonBody) throws IOException {
         HttpPut request = new HttpPut(endpoint);
-        StringEntity entity = new StringEntity(jsonBody, StandardCharsets.UTF_8.name());
+        StringEntity entity = new StringEntity(jsonBody, StandardCharsets.UTF_8);
         entity.setContentType("application/json");
         request.setEntity(entity);
         HttpResponse response = executeRequest(serverUrl, request);
@@ -427,8 +479,8 @@ public class ConnectRestServerTest {
     }
 
     private void expectEmptyRestExtensions() {
-        doReturn(Collections.emptyList()).when(plugins).newPlugins(
-                eq(Collections.emptyList()),
+        doReturn(List.of()).when(plugins).newPlugins(
+                eq(List.of()),
                 any(AbstractConfig.class),
                 eq(ConnectRestExtension.class)
         );
