@@ -28,14 +28,12 @@ import org.apache.kafka.coordinator.group.generated.ConsumerGroupMemberMetadataV
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupMetadataKey;
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupMetadataValue;
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupPartitionMetadataKey;
-import org.apache.kafka.coordinator.group.generated.ConsumerGroupPartitionMetadataValue;
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupRegularExpressionKey;
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupRegularExpressionValue;
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupTargetAssignmentMemberKey;
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupTargetAssignmentMemberValue;
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupTargetAssignmentMetadataKey;
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupTargetAssignmentMetadataValue;
-import org.apache.kafka.coordinator.group.generated.CoordinatorRecordType;
 import org.apache.kafka.coordinator.group.generated.GroupMetadataKey;
 import org.apache.kafka.coordinator.group.generated.GroupMetadataValue;
 import org.apache.kafka.coordinator.group.generated.OffsetCommitKey;
@@ -46,15 +44,15 @@ import org.apache.kafka.coordinator.group.generated.ShareGroupMemberMetadataKey;
 import org.apache.kafka.coordinator.group.generated.ShareGroupMemberMetadataValue;
 import org.apache.kafka.coordinator.group.generated.ShareGroupMetadataKey;
 import org.apache.kafka.coordinator.group.generated.ShareGroupMetadataValue;
-import org.apache.kafka.coordinator.group.generated.ShareGroupPartitionMetadataKey;
-import org.apache.kafka.coordinator.group.generated.ShareGroupPartitionMetadataValue;
+import org.apache.kafka.coordinator.group.generated.ShareGroupStatePartitionMetadataKey;
+import org.apache.kafka.coordinator.group.generated.ShareGroupStatePartitionMetadataValue;
 import org.apache.kafka.coordinator.group.generated.ShareGroupTargetAssignmentMemberKey;
 import org.apache.kafka.coordinator.group.generated.ShareGroupTargetAssignmentMemberValue;
 import org.apache.kafka.coordinator.group.generated.ShareGroupTargetAssignmentMetadataKey;
 import org.apache.kafka.coordinator.group.generated.ShareGroupTargetAssignmentMetadataValue;
-import org.apache.kafka.coordinator.group.modern.TopicMetadata;
 import org.apache.kafka.coordinator.group.modern.consumer.ConsumerGroupMember;
 import org.apache.kafka.coordinator.group.modern.consumer.ResolvedRegularExpression;
+import org.apache.kafka.coordinator.group.modern.share.ShareGroup.InitMapValue;
 import org.apache.kafka.coordinator.group.modern.share.ShareGroupMember;
 import org.apache.kafka.server.common.ApiMessageAndVersion;
 
@@ -87,13 +85,10 @@ public class GroupCoordinatorRecordHelpers {
     ) {
         List<String> topicNames = new ArrayList<>(member.subscribedTopicNames());
         Collections.sort(topicNames);
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupMemberMetadataKey()
-                    .setGroupId(groupId)
-                    .setMemberId(member.memberId()),
-                CoordinatorRecordType.CONSUMER_GROUP_MEMBER_METADATA.id()
-            ),
+        return CoordinatorRecord.record(
+            new ConsumerGroupMemberMetadataKey()
+                .setGroupId(groupId)
+                .setMemberId(member.memberId()),
             new ApiMessageAndVersion(
                 new ConsumerGroupMemberMetadataValue()
                     .setRackId(member.rackId())
@@ -121,47 +116,10 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         String memberId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupMemberMetadataKey()
-                    .setGroupId(groupId)
-                    .setMemberId(memberId),
-                CoordinatorRecordType.CONSUMER_GROUP_MEMBER_METADATA.id()
-            ),
-            null // Tombstone.
-        );
-    }
-
-    /**
-     * Creates a ConsumerGroupPartitionMetadata record.
-     *
-     * @param groupId                   The consumer group id.
-     * @param newSubscriptionMetadata   The subscription metadata.
-     * @return The record.
-     */
-    public static CoordinatorRecord newConsumerGroupSubscriptionMetadataRecord(
-        String groupId,
-        Map<String, TopicMetadata> newSubscriptionMetadata
-    ) {
-        ConsumerGroupPartitionMetadataValue value = new ConsumerGroupPartitionMetadataValue();
-        newSubscriptionMetadata.forEach((topicName, topicMetadata) ->
-            value.topics().add(new ConsumerGroupPartitionMetadataValue.TopicMetadata()
-                .setTopicId(topicMetadata.id())
-                .setTopicName(topicMetadata.name())
-                .setNumPartitions(topicMetadata.numPartitions())
-            )
-        );
-
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupPartitionMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.CONSUMER_GROUP_PARTITION_METADATA.id()
-            ),
-            new ApiMessageAndVersion(
-                value,
-                (short) 0
-            )
+        return CoordinatorRecord.tombstone(
+            new ConsumerGroupMemberMetadataKey()
+                .setGroupId(groupId)
+                .setMemberId(memberId)
         );
     }
 
@@ -174,13 +132,9 @@ public class GroupCoordinatorRecordHelpers {
     public static CoordinatorRecord newConsumerGroupSubscriptionMetadataTombstoneRecord(
         String groupId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupPartitionMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.CONSUMER_GROUP_PARTITION_METADATA.id()
-            ),
-            null // Tombstone.
+        return CoordinatorRecord.tombstone(
+            new ConsumerGroupPartitionMetadataKey()
+                .setGroupId(groupId)
         );
     }
 
@@ -189,21 +143,21 @@ public class GroupCoordinatorRecordHelpers {
      *
      * @param groupId       The consumer group id.
      * @param newGroupEpoch The consumer group epoch.
+     * @param metadataHash  The consumer group metadata hash.
      * @return The record.
      */
     public static CoordinatorRecord newConsumerGroupEpochRecord(
         String groupId,
-        int newGroupEpoch
+        int newGroupEpoch,
+        long metadataHash
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.CONSUMER_GROUP_METADATA.id()
-            ),
+        return CoordinatorRecord.record(
+            new ConsumerGroupMetadataKey()
+                .setGroupId(groupId),
             new ApiMessageAndVersion(
                 new ConsumerGroupMetadataValue()
-                    .setEpoch(newGroupEpoch),
+                    .setEpoch(newGroupEpoch)
+                    .setMetadataHash(metadataHash),
                 (short) 0
             )
         );
@@ -218,13 +172,9 @@ public class GroupCoordinatorRecordHelpers {
     public static CoordinatorRecord newConsumerGroupEpochTombstoneRecord(
         String groupId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.CONSUMER_GROUP_METADATA.id()
-            ),
-            null // Tombstone.
+        return CoordinatorRecord.tombstone(
+            new ConsumerGroupMetadataKey()
+                .setGroupId(groupId)
         );
     }
 
@@ -252,13 +202,10 @@ public class GroupCoordinatorRecordHelpers {
             );
         }
 
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupTargetAssignmentMemberKey()
-                    .setGroupId(groupId)
-                    .setMemberId(memberId),
-                CoordinatorRecordType.CONSUMER_GROUP_TARGET_ASSIGNMENT_MEMBER.id()
-            ),
+        return CoordinatorRecord.record(
+            new ConsumerGroupTargetAssignmentMemberKey()
+                .setGroupId(groupId)
+                .setMemberId(memberId),
             new ApiMessageAndVersion(
                 new ConsumerGroupTargetAssignmentMemberValue()
                     .setTopicPartitions(topicPartitions),
@@ -278,14 +225,10 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         String memberId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupTargetAssignmentMemberKey()
-                    .setGroupId(groupId)
-                    .setMemberId(memberId),
-                CoordinatorRecordType.CONSUMER_GROUP_TARGET_ASSIGNMENT_MEMBER.id()
-            ),
-            null // Tombstone.
+        return CoordinatorRecord.tombstone(
+            new ConsumerGroupTargetAssignmentMemberKey()
+                .setGroupId(groupId)
+                .setMemberId(memberId)
         );
     }
 
@@ -300,12 +243,9 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         int assignmentEpoch
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupTargetAssignmentMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.CONSUMER_GROUP_TARGET_ASSIGNMENT_METADATA.id()
-            ),
+        return CoordinatorRecord.record(
+            new ConsumerGroupTargetAssignmentMetadataKey()
+                .setGroupId(groupId),
             new ApiMessageAndVersion(
                 new ConsumerGroupTargetAssignmentMetadataValue()
                     .setAssignmentEpoch(assignmentEpoch),
@@ -323,13 +263,9 @@ public class GroupCoordinatorRecordHelpers {
     public static CoordinatorRecord newConsumerGroupTargetAssignmentEpochTombstoneRecord(
         String groupId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupTargetAssignmentMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.CONSUMER_GROUP_TARGET_ASSIGNMENT_METADATA.id()
-            ),
-            null // Tombstone.
+        return CoordinatorRecord.tombstone(
+            new ConsumerGroupTargetAssignmentMetadataKey()
+                .setGroupId(groupId)
         );
     }
 
@@ -344,13 +280,10 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         ConsumerGroupMember member
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupCurrentMemberAssignmentKey()
-                    .setGroupId(groupId)
-                    .setMemberId(member.memberId()),
-                CoordinatorRecordType.CONSUMER_GROUP_CURRENT_MEMBER_ASSIGNMENT.id()
-            ),
+        return CoordinatorRecord.record(
+            new ConsumerGroupCurrentMemberAssignmentKey()
+                .setGroupId(groupId)
+                .setMemberId(member.memberId()),
             new ApiMessageAndVersion(
                 new ConsumerGroupCurrentMemberAssignmentValue()
                     .setMemberEpoch(member.memberEpoch())
@@ -374,14 +307,10 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         String memberId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupCurrentMemberAssignmentKey()
-                    .setGroupId(groupId)
-                    .setMemberId(memberId),
-                CoordinatorRecordType.CONSUMER_GROUP_CURRENT_MEMBER_ASSIGNMENT.id()
-            ),
-            null // Tombstone
+        return CoordinatorRecord.tombstone(
+            new ConsumerGroupCurrentMemberAssignmentKey()
+                .setGroupId(groupId)
+                .setMemberId(memberId)
         );
     }
 
@@ -398,21 +327,18 @@ public class GroupCoordinatorRecordHelpers {
         String regex,
         ResolvedRegularExpression resolvedRegularExpression
     ) {
-        List<String> topics = new ArrayList<>(resolvedRegularExpression.topics);
+        List<String> topics = new ArrayList<>(resolvedRegularExpression.topics());
         Collections.sort(topics);
 
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupRegularExpressionKey()
-                    .setGroupId(groupId)
-                    .setRegularExpression(regex),
-                CoordinatorRecordType.CONSUMER_GROUP_REGULAR_EXPRESSION.id()
-            ),
+        return CoordinatorRecord.record(
+            new ConsumerGroupRegularExpressionKey()
+                .setGroupId(groupId)
+                .setRegularExpression(regex),
             new ApiMessageAndVersion(
                 new ConsumerGroupRegularExpressionValue()
                     .setTopics(topics)
-                    .setVersion(resolvedRegularExpression.version)
-                    .setTimestamp(resolvedRegularExpression.timestamp),
+                    .setVersion(resolvedRegularExpression.version())
+                    .setTimestamp(resolvedRegularExpression.timestamp()),
                 (short) 0
             )
         );
@@ -429,14 +355,10 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         String regex
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupRegularExpressionKey()
-                    .setGroupId(groupId)
-                    .setRegularExpression(regex),
-                CoordinatorRecordType.CONSUMER_GROUP_REGULAR_EXPRESSION.id()
-            ),
-            null // Tombstone
+        return CoordinatorRecord.tombstone(
+            new ConsumerGroupRegularExpressionKey()
+                .setGroupId(groupId)
+                .setRegularExpression(regex)
         );
     }
 
@@ -477,12 +399,9 @@ public class GroupCoordinatorRecordHelpers {
             );
         });
 
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new GroupMetadataKey()
-                    .setGroup(group.groupId()),
-                CoordinatorRecordType.GROUP_METADATA.id()
-            ),
+        return CoordinatorRecord.record(
+            new GroupMetadataKey()
+                .setGroup(group.groupId()),
             new ApiMessageAndVersion(
                 new GroupMetadataValue()
                     .setProtocol(group.protocolName().orElse(null))
@@ -505,13 +424,9 @@ public class GroupCoordinatorRecordHelpers {
     public static CoordinatorRecord newGroupMetadataTombstoneRecord(
         String groupId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new GroupMetadataKey()
-                    .setGroup(groupId),
-                CoordinatorRecordType.GROUP_METADATA.id()
-            ),
-            null // Tombstone
+        return CoordinatorRecord.tombstone(
+            new GroupMetadataKey()
+                .setGroup(groupId)
         );
     }
 
@@ -524,12 +439,9 @@ public class GroupCoordinatorRecordHelpers {
     public static CoordinatorRecord newEmptyGroupMetadataRecord(
         ClassicGroup group
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new GroupMetadataKey()
-                    .setGroup(group.groupId()),
-                CoordinatorRecordType.GROUP_METADATA.id()
-            ),
+        return CoordinatorRecord.record(
+            new GroupMetadataKey()
+                .setGroup(group.groupId()),
             new ApiMessageAndVersion(
                 new GroupMetadataValue()
                     .setProtocol(null)
@@ -537,7 +449,7 @@ public class GroupCoordinatorRecordHelpers {
                     .setGeneration(0)
                     .setLeader(null)
                     .setCurrentStateTimestamp(group.currentStateTimestampOrDefault())
-                    .setMembers(Collections.emptyList()),
+                    .setMembers(List.of()),
                 GROUP_METADATA_VALUE_VERSION
             )
         );
@@ -560,14 +472,11 @@ public class GroupCoordinatorRecordHelpers {
     ) {
         short version = offsetCommitValueVersion(offsetAndMetadata.expireTimestampMs.isPresent());
 
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new OffsetCommitKey()
-                    .setGroup(groupId)
-                    .setTopic(topic)
-                    .setPartition(partitionId),
-                CoordinatorRecordType.OFFSET_COMMIT.id()
-            ),
+        return CoordinatorRecord.record(
+            new OffsetCommitKey()
+                .setGroup(groupId)
+                .setTopic(topic)
+                .setPartition(partitionId),
             new ApiMessageAndVersion(
                 new OffsetCommitValue()
                     .setOffset(offsetAndMetadata.committedOffset)
@@ -575,7 +484,8 @@ public class GroupCoordinatorRecordHelpers {
                     .setMetadata(offsetAndMetadata.metadata)
                     .setCommitTimestamp(offsetAndMetadata.commitTimestampMs)
                     // Version 1 has a non-empty expireTimestamp field
-                    .setExpireTimestamp(offsetAndMetadata.expireTimestampMs.orElse(OffsetCommitRequest.DEFAULT_TIMESTAMP)),
+                    .setExpireTimestamp(offsetAndMetadata.expireTimestampMs.orElse(OffsetCommitRequest.DEFAULT_TIMESTAMP))
+                    .setTopicId(offsetAndMetadata.topicId),
                 version
             )
         );
@@ -585,9 +495,7 @@ public class GroupCoordinatorRecordHelpers {
         if (expireTimestampMs) {
             return 1;
         } else {
-            // Serialize with the highest supported non-flexible version
-            // until a tagged field is introduced or the version is bumped.
-            return  3;
+            return  4;
         }
     }
 
@@ -604,15 +512,11 @@ public class GroupCoordinatorRecordHelpers {
         String topic,
         int partitionId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new OffsetCommitKey()
-                    .setGroup(groupId)
-                    .setTopic(topic)
-                    .setPartition(partitionId),
-                CoordinatorRecordType.OFFSET_COMMIT.id()
-            ),
-            null
+        return CoordinatorRecord.tombstone(
+            new OffsetCommitKey()
+                .setGroup(groupId)
+                .setTopic(topic)
+                .setPartition(partitionId)
         );
     }
 
@@ -629,13 +533,10 @@ public class GroupCoordinatorRecordHelpers {
     ) {
         List<String> topicNames = new ArrayList<>(member.subscribedTopicNames());
         Collections.sort(topicNames);
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupMemberMetadataKey()
-                    .setGroupId(groupId)
-                    .setMemberId(member.memberId()),
-                CoordinatorRecordType.SHARE_GROUP_MEMBER_METADATA.id()
-            ),
+        return CoordinatorRecord.record(
+            new ShareGroupMemberMetadataKey()
+                .setGroupId(groupId)
+                .setMemberId(member.memberId()),
             new ApiMessageAndVersion(
                 new ShareGroupMemberMetadataValue()
                     .setRackId(member.rackId())
@@ -658,66 +559,10 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         String memberId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupMemberMetadataKey()
-                    .setGroupId(groupId)
-                    .setMemberId(memberId),
-                CoordinatorRecordType.SHARE_GROUP_MEMBER_METADATA.id()
-            ),
-            null // Tombstone.
-        );
-    }
-
-    /**
-     * Creates a ShareGroupPartitionMetadata record.
-     *
-     * @param groupId                   The group id.
-     * @param newSubscriptionMetadata   The subscription metadata.
-     * @return The record.
-     */
-    public static CoordinatorRecord newShareGroupSubscriptionMetadataRecord(
-        String groupId,
-        Map<String, TopicMetadata> newSubscriptionMetadata
-    ) {
-        ShareGroupPartitionMetadataValue value = new ShareGroupPartitionMetadataValue();
-        newSubscriptionMetadata.forEach((topicName, topicMetadata) ->
-            value.topics().add(new ShareGroupPartitionMetadataValue.TopicMetadata()
-                .setTopicId(topicMetadata.id())
-                .setTopicName(topicMetadata.name())
-                .setNumPartitions(topicMetadata.numPartitions())
-            )
-        );
-
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupPartitionMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.SHARE_GROUP_PARTITION_METADATA.id()
-            ),
-            new ApiMessageAndVersion(
-                value,
-                (short) 0
-            )
-        );
-    }
-
-    /**
-     * Creates a ShareGroupPartitionMetadata tombstone.
-     *
-     * @param groupId   The group id.
-     * @return The record.
-     */
-    public static CoordinatorRecord newShareGroupSubscriptionMetadataTombstoneRecord(
-        String groupId
-    ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupPartitionMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.SHARE_GROUP_PARTITION_METADATA.id()
-            ),
-            null // Tombstone.
+        return CoordinatorRecord.tombstone(
+            new ShareGroupMemberMetadataKey()
+                .setGroupId(groupId)
+                .setMemberId(memberId)
         );
     }
 
@@ -726,21 +571,21 @@ public class GroupCoordinatorRecordHelpers {
      *
      * @param groupId       The group id.
      * @param newGroupEpoch The group epoch.
+     * @param metadataHash  The group metadata hash.
      * @return The record.
      */
     public static CoordinatorRecord newShareGroupEpochRecord(
         String groupId,
-        int newGroupEpoch
+        int newGroupEpoch,
+        long metadataHash
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.SHARE_GROUP_METADATA.id()
-            ),
+        return CoordinatorRecord.record(
+            new ShareGroupMetadataKey()
+                .setGroupId(groupId),
             new ApiMessageAndVersion(
                 new ShareGroupMetadataValue()
-                    .setEpoch(newGroupEpoch),
+                    .setEpoch(newGroupEpoch)
+                    .setMetadataHash(metadataHash),
                 (short) 0
             )
         );
@@ -755,13 +600,9 @@ public class GroupCoordinatorRecordHelpers {
     public static CoordinatorRecord newShareGroupEpochTombstoneRecord(
         String groupId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.SHARE_GROUP_METADATA.id()
-            ),
-            null // Tombstone.
+        return CoordinatorRecord.tombstone(
+            new ShareGroupMetadataKey()
+                .setGroupId(groupId)
         );
     }
 
@@ -789,13 +630,10 @@ public class GroupCoordinatorRecordHelpers {
             );
         }
 
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupTargetAssignmentMemberKey()
-                    .setGroupId(groupId)
-                    .setMemberId(memberId),
-                CoordinatorRecordType.SHARE_GROUP_TARGET_ASSIGNMENT_MEMBER.id()
-            ),
+        return CoordinatorRecord.record(
+            new ShareGroupTargetAssignmentMemberKey()
+                .setGroupId(groupId)
+                .setMemberId(memberId),
             new ApiMessageAndVersion(
                 new ShareGroupTargetAssignmentMemberValue()
                     .setTopicPartitions(topicPartitions),
@@ -815,14 +653,10 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         String memberId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupTargetAssignmentMemberKey()
-                    .setGroupId(groupId)
-                    .setMemberId(memberId),
-                CoordinatorRecordType.SHARE_GROUP_TARGET_ASSIGNMENT_MEMBER.id()
-            ),
-            null // Tombstone.
+        return CoordinatorRecord.tombstone(
+            new ShareGroupTargetAssignmentMemberKey()
+                .setGroupId(groupId)
+                .setMemberId(memberId)
         );
     }
 
@@ -837,12 +671,9 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         int assignmentEpoch
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupTargetAssignmentMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.SHARE_GROUP_TARGET_ASSIGNMENT_METADATA.id()
-            ),
+        return CoordinatorRecord.record(
+            new ShareGroupTargetAssignmentMetadataKey()
+                .setGroupId(groupId),
             new ApiMessageAndVersion(
                 new ShareGroupTargetAssignmentMetadataValue()
                     .setAssignmentEpoch(assignmentEpoch),
@@ -860,13 +691,9 @@ public class GroupCoordinatorRecordHelpers {
     public static CoordinatorRecord newShareGroupTargetAssignmentEpochTombstoneRecord(
         String groupId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupTargetAssignmentMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.SHARE_GROUP_TARGET_ASSIGNMENT_METADATA.id()
-            ),
-            null // Tombstone.
+        return CoordinatorRecord.tombstone(
+            new ShareGroupTargetAssignmentMetadataKey()
+                .setGroupId(groupId)
         );
     }
 
@@ -881,13 +708,10 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         ShareGroupMember member
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupCurrentMemberAssignmentKey()
-                    .setGroupId(groupId)
-                    .setMemberId(member.memberId()),
-                CoordinatorRecordType.SHARE_GROUP_CURRENT_MEMBER_ASSIGNMENT.id()
-            ),
+        return CoordinatorRecord.record(
+            new ShareGroupCurrentMemberAssignmentKey()
+                .setGroupId(groupId)
+                .setMemberId(member.memberId()),
             new ApiMessageAndVersion(
                 new ShareGroupCurrentMemberAssignmentValue()
                     .setMemberEpoch(member.memberEpoch())
@@ -910,14 +734,72 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         String memberId
     ) {
-        return new CoordinatorRecord(
+        return CoordinatorRecord.tombstone(
+            new ShareGroupCurrentMemberAssignmentKey()
+                .setGroupId(groupId)
+                .setMemberId(memberId)
+        );
+    }
+
+    /**
+     * Creates a ShareGroupStatePartitionMetadata tombstone.
+     *
+     * @param groupId   The share group id.
+     * @return The record.
+     */
+    public static CoordinatorRecord newShareGroupStatePartitionMetadataTombstoneRecord(
+        String groupId
+    ) {
+        return CoordinatorRecord.tombstone(
+            new ShareGroupStatePartitionMetadataKey()
+                .setGroupId(groupId)
+        );
+    }
+
+    /**
+     * Creates a ShareGroupStatePartitionMetadata record.
+     *
+     * @param groupId   The share group id.
+     * @param initializedTopics  Topics which have been initialized.
+     * @param deletingTopics  Topics which are being deleted.
+     * @return The record.
+     */
+    public static CoordinatorRecord newShareGroupStatePartitionMetadataRecord(
+        String groupId,
+        Map<Uuid, InitMapValue> initializingTopics,
+        Map<Uuid, InitMapValue> initializedTopics,
+        Map<Uuid, String> deletingTopics
+    ) {
+        List<ShareGroupStatePartitionMetadataValue.TopicPartitionsInfo> initializingTopicPartitionInfo = initializingTopics.entrySet().stream()
+            .map(entry -> new ShareGroupStatePartitionMetadataValue.TopicPartitionsInfo()
+                .setTopicId(entry.getKey())
+                .setTopicName(entry.getValue().name())
+                .setPartitions(entry.getValue().partitions().stream().toList()))
+            .toList();
+
+        List<ShareGroupStatePartitionMetadataValue.TopicPartitionsInfo> initializedTopicPartitionInfo = initializedTopics.entrySet().stream()
+            .map(entry -> new ShareGroupStatePartitionMetadataValue.TopicPartitionsInfo()
+                .setTopicId(entry.getKey())
+                .setTopicName(entry.getValue().name())
+                .setPartitions(entry.getValue().partitions().stream().toList()))
+            .toList();
+
+        List<ShareGroupStatePartitionMetadataValue.TopicInfo> deletingTopicsInfo = deletingTopics.entrySet().stream()
+            .map(entry -> new ShareGroupStatePartitionMetadataValue.TopicInfo()
+                .setTopicId(entry.getKey())
+                .setTopicName(entry.getValue()))
+            .toList();
+
+        return CoordinatorRecord.record(
+            new ShareGroupStatePartitionMetadataKey()
+                .setGroupId(groupId),
             new ApiMessageAndVersion(
-                new ShareGroupCurrentMemberAssignmentKey()
-                    .setGroupId(groupId)
-                    .setMemberId(memberId),
-                CoordinatorRecordType.SHARE_GROUP_CURRENT_MEMBER_ASSIGNMENT.id()
-            ),
-            null // Tombstone
+                new ShareGroupStatePartitionMetadataValue()
+                    .setInitializingTopics(initializingTopicPartitionInfo)
+                    .setInitializedTopics(initializedTopicPartitionInfo)
+                    .setDeletingTopics(deletingTopicsInfo),
+                (short) 0
+            )
         );
     }
 
