@@ -26,7 +26,6 @@ import org.apache.kafka.image.loader.LoaderManifest;
 import org.apache.kafka.image.loader.LoaderManifestType;
 import org.apache.kafka.metadata.ControllerRegistration;
 
-import java.util.Collections;
 import java.util.Map;
 
 
@@ -37,7 +36,7 @@ public class ControllerRegistrationsPublisher implements MetadataPublisher {
     private volatile Map<Integer, ControllerRegistration> controllers;
 
     public ControllerRegistrationsPublisher() {
-        this.controllers = Collections.emptyMap();
+        this.controllers = Map.of();
     }
 
     @Override
