@@ -16,7 +16,6 @@
  */
 package org.apache.kafka.server.common;
 
-import java.util.Collections;
 import java.util.Map;
 
 /**
@@ -27,8 +26,8 @@ public class UnitTestFeatureVersion {
      * The feature is used for testing latest production is not one of the feature versions.
      */
     public enum FV0 implements FeatureVersion {
-        UT_FV0_0(0, MetadataVersion.MINIMUM_KRAFT_VERSION, Collections.emptyMap()),
-        UT_FV0_1(1, MetadataVersion.IBP_3_7_IV0, Collections.emptyMap());
+        UT_FV0_0(0, MetadataVersion.MINIMUM_VERSION, Map.of()),
+        UT_FV0_1(1, MetadataVersion.IBP_3_7_IV0, Map.of());
 
         private final short featureLevel;
         private final MetadataVersion bootstrapMetadataVersion;
@@ -69,8 +68,8 @@ public class UnitTestFeatureVersion {
      * The feature is used to test latest production lags behind the default value.
      */
     public enum FV1 implements FeatureVersion {
-        UT_FV1_0(0, MetadataVersion.MINIMUM_KRAFT_VERSION, Collections.emptyMap()),
-        UT_FV1_1(1, MetadataVersion.IBP_3_7_IV0, Collections.emptyMap());
+        UT_FV1_0(0, MetadataVersion.MINIMUM_VERSION, Map.of()),
+        UT_FV1_1(1, MetadataVersion.IBP_3_7_IV0, Map.of());
 
         private final short featureLevel;
         private final MetadataVersion bootstrapMetadataVersion;
@@ -111,8 +110,8 @@ public class UnitTestFeatureVersion {
      * The feature is used to test the dependency of the latest production that is not yet production ready.
      */
     public enum FV2 implements FeatureVersion {
-        UT_FV2_0(0, MetadataVersion.MINIMUM_KRAFT_VERSION, Collections.emptyMap()),
-        UT_FV2_1(1, MetadataVersion.IBP_3_7_IV0, Collections.emptyMap());
+        UT_FV2_0(0, MetadataVersion.MINIMUM_VERSION, Map.of()),
+        UT_FV2_1(1, MetadataVersion.IBP_3_7_IV0, Map.of());
 
         private final short featureLevel;
         private final MetadataVersion bootstrapMetadataVersion;
@@ -153,8 +152,8 @@ public class UnitTestFeatureVersion {
      * The feature is used to test the dependency of the latest production that is not yet production ready.
      */
     public enum FV3 implements FeatureVersion {
-        UT_FV3_0(0, MetadataVersion.MINIMUM_KRAFT_VERSION, Collections.emptyMap()),
-        UT_FV3_1(1, MetadataVersion.IBP_3_7_IV0, Collections.singletonMap(FV2.FEATURE_NAME, (short) 1));
+        UT_FV3_0(0, MetadataVersion.MINIMUM_VERSION, Map.of()),
+        UT_FV3_1(1, MetadataVersion.IBP_3_7_IV0, Map.of(FV2.FEATURE_NAME, (short) 1));
 
         private final short featureLevel;
         private final MetadataVersion bootstrapMetadataVersion;
@@ -195,8 +194,8 @@ public class UnitTestFeatureVersion {
      * The feature is used to test the dependency of the default value that is not yet default ready.
      */
     public enum FV4 implements FeatureVersion {
-        UT_FV4_0(0, MetadataVersion.MINIMUM_KRAFT_VERSION, Collections.emptyMap()),
-        UT_FV4_1(1, MetadataVersion.latestTesting(), Collections.emptyMap());
+        UT_FV4_0(0, MetadataVersion.MINIMUM_VERSION, Map.of()),
+        UT_FV4_1(1, MetadataVersion.latestTesting(), Map.of());
 
         private final short featureLevel;
         private final MetadataVersion bootstrapMetadataVersion;
@@ -237,8 +236,8 @@ public class UnitTestFeatureVersion {
      * The feature is used to test the dependency of the default value that is not yet default ready.
      */
     public enum FV5 implements FeatureVersion {
-        UT_FV5_0(0, MetadataVersion.MINIMUM_KRAFT_VERSION, Collections.emptyMap()),
-        UT_FV5_1(1, MetadataVersion.IBP_3_7_IV0, Collections.singletonMap(FV4.FEATURE_NAME, (short) 1));
+        UT_FV5_0(0, MetadataVersion.MINIMUM_VERSION, Map.of()),
+        UT_FV5_1(1, MetadataVersion.IBP_3_7_IV0, Map.of(FV4.FEATURE_NAME, (short) 1));
 
         private final short featureLevel;
         private final MetadataVersion bootstrapMetadataVersion;
@@ -279,8 +278,8 @@ public class UnitTestFeatureVersion {
      * The feature is used to test the latest production has MV dependency that is not yet production ready.
      */
     public enum FV6 implements FeatureVersion {
-        UT_FV6_0(0, MetadataVersion.MINIMUM_KRAFT_VERSION, Collections.emptyMap()),
-        UT_FV6_1(1, MetadataVersion.latestTesting(), Collections.singletonMap(MetadataVersion.FEATURE_NAME, MetadataVersion.latestTesting().featureLevel()));
+        UT_FV6_0(0, MetadataVersion.MINIMUM_VERSION, Map.of()),
+        UT_FV6_1(1, MetadataVersion.latestTesting(), Map.of(MetadataVersion.FEATURE_NAME, MetadataVersion.latestTesting().featureLevel()));
 
         private final short featureLevel;
         private final MetadataVersion bootstrapMetadataVersion;
@@ -321,8 +320,8 @@ public class UnitTestFeatureVersion {
      * The feature is used to test the default value has MV dependency that is behind the bootstrap MV.
      */
     public enum FV7 implements FeatureVersion {
-        UT_FV7_0(0, MetadataVersion.MINIMUM_KRAFT_VERSION, Collections.singletonMap(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_7_IV0.featureLevel())),
-        UT_FV7_1(1, MetadataVersion.IBP_3_8_IV0, Collections.singletonMap(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_8_IV0.featureLevel()));
+        UT_FV7_0(0, MetadataVersion.MINIMUM_VERSION, Map.of(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_7_IV0.featureLevel())),
+        UT_FV7_1(1, MetadataVersion.IBP_3_8_IV0, Map.of(MetadataVersion.FEATURE_NAME, MetadataVersion.IBP_3_8_IV0.featureLevel()));
 
         private final short featureLevel;
         private final MetadataVersion bootstrapMetadataVersion;
