@@ -18,6 +18,7 @@
 package org.apache.kafka.server.network;
 
 import org.apache.kafka.common.Endpoint;
+import org.apache.kafka.common.internals.Plugin;
 import org.apache.kafka.common.utils.LogContext;
 import org.apache.kafka.server.authorizer.Authorizer;
 import org.apache.kafka.server.authorizer.AuthorizerServerInfo;
@@ -26,7 +27,6 @@ import org.slf4j.Logger;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -80,19 +80,19 @@ public class EndpointReadyFutures {
         /**
          * Build the EndpointReadyFutures object.
          *
-         * @param authorizer    The authorizer to use, if any. Will be started.
-         * @param info          Server information to be passed to the authorizer.
+         * @param authorizerPlugin    The authorizer to use, if any. Will be started.
+         * @param info                Server information to be passed to the authorizer.
          *
          * @return              The new futures object.
          */
         public EndpointReadyFutures build(
-            Optional<Authorizer> authorizer,
+            Optional<Plugin<Authorizer>> authorizerPlugin,
             AuthorizerServerInfo info
         ) {
-            if (authorizer.isPresent()) {
-                return build(authorizer.get().start(info), info);
+            if (authorizerPlugin.isPresent()) {
+                return build(authorizerPlugin.get().get().start(info), info);
             } else {
-                return build(Collections.emptyMap(), info);
+                return build(Map.of(), info);
             }
         }
 
@@ -113,7 +113,7 @@ public class EndpointReadyFutures {
                 List<String> notInInfo = new ArrayList<>();
                 for (Endpoint endpoint : effectiveStartFutures.keySet()) {
                     if (!info.endpoints().contains(endpoint)) {
-                        notInInfo.add(endpoint.listenerName().orElse("[none]"));
+                        notInInfo.add(endpoint.listener());
                     }
                 }
                 throw new RuntimeException("Found authorizer futures that weren't included " +
@@ -146,7 +146,7 @@ public class EndpointReadyFutures {
         final CompletableFuture<Void> future;
 
         EndpointReadyFuture(Endpoint endpoint, Collection<String> stageNames) {
-            this.endpointName = endpoint.listenerName().orElse("UNNAMED");
+            this.endpointName = endpoint.listener();
             this.incomplete = new TreeSet<>(stageNames);
             this.future = new CompletableFuture<>();
         }
@@ -205,7 +205,7 @@ public class EndpointReadyFutures {
                 }
             }));
         });
-        this.futures = Collections.unmodifiableMap(newFutures);
+        this.futures = newFutures;
     }
 
     public Map<Endpoint, CompletableFuture<Void>> futures() {
