@@ -16,11 +16,9 @@
  */
 package org.apache.kafka.server.util;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class Csv {
@@ -49,9 +47,9 @@ public class Csv {
      */
     public static List<String> parseCsvList(String csvList) {
         if (csvList == null || csvList.isEmpty()) {
-            return Collections.emptyList();
+            return List.of();
         } else {
-            return Stream.of(csvList.split("\\s*,\\s*")).filter(v -> !v.isEmpty()).collect(Collectors.toList());
+            return Stream.of(csvList.split("\\s*,\\s*")).filter(v -> !v.isEmpty()).toList();
         }
     }
 }
