@@ -32,11 +32,14 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.TimeUnit;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
@@ -60,7 +63,7 @@ public class RemoteLogMetadataCacheTest {
             if (state != RemoteLogSegmentState.COPY_SEGMENT_STARTED) {
                 RemoteLogSegmentId segmentId = new RemoteLogSegmentId(tpId0, Uuid.randomUuid());
                 RemoteLogSegmentMetadata segmentMetadata = new RemoteLogSegmentMetadata(segmentId, 0, 100L,
-                        -1L, brokerId0, time.milliseconds(), segmentSize, Collections.singletonMap(0, 0L));
+                        -1L, brokerId0, time.milliseconds(), segmentSize, Map.of(0, 0L));
                 RemoteLogSegmentMetadata updatedMetadata = segmentMetadata.createWithUpdates(
                         new RemoteLogSegmentMetadataUpdate(segmentId, time.milliseconds(), Optional.empty(),
                                 state, brokerId1));
@@ -102,7 +105,7 @@ public class RemoteLogMetadataCacheTest {
         long offset = 10L;
         RemoteLogSegmentId segmentId = new RemoteLogSegmentId(tpId0, Uuid.randomUuid());
         RemoteLogSegmentMetadata segmentMetadata = new RemoteLogSegmentMetadata(segmentId, offset, 100L,
-                -1L, brokerId0, time.milliseconds(), segmentSize, Collections.singletonMap(leaderEpoch, offset));
+                -1L, brokerId0, time.milliseconds(), segmentSize, Map.of(leaderEpoch, offset));
         cache.addCopyInProgressSegment(segmentMetadata);
 
         // invalid-transition-1. COPY_SEGMENT_STARTED -> DELETE_SEGMENT_FINISHED
@@ -144,6 +147,24 @@ public class RemoteLogMetadataCacheTest {
         updatedMetadata = new RemoteLogSegmentMetadataUpdate(segmentId, time.milliseconds(),
                 Optional.empty(), RemoteLogSegmentState.DELETE_SEGMENT_FINISHED, brokerId1);
         updateAndVerifyCacheContents(updatedMetadata, RemoteLogSegmentState.DELETE_SEGMENT_FINISHED, leaderEpoch);
+    }
+
+    @Test
+    public void testAwaitInitialized() throws InterruptedException {
+        CountDownLatch latch = new CountDownLatch(1);
+        assertFalse(cache.isInitialized());
+        Thread t = new Thread(() -> {
+            try {
+                cache.awaitInitialized(2000, TimeUnit.MILLISECONDS);
+                latch.countDown();
+            } catch (InterruptedException e) {
+                fail("Shouldn't throw InterruptedException");
+            }
+        });
+        t.start();
+        cache.markInitialized();
+        assertTrue(latch.await(1, TimeUnit.SECONDS));
+        assertTrue(cache.isInitialized());
     }
 
     private void updateAndVerifyCacheContents(RemoteLogSegmentMetadataUpdate updatedMetadata,
