@@ -39,7 +39,6 @@ import net.sourceforge.argparse4j.inf.Subparser;
 import net.sourceforge.argparse4j.inf.Subparsers;
 import net.sourceforge.argparse4j.internal.HelpScreenException;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -196,7 +195,7 @@ public class FeatureCommand {
                 );
         versionMappingParser.addArgument("--release-version")
                 .help("The release version to use for the corresponding feature mapping. The minimum is " +
-                        MetadataVersion.IBP_3_0_IV1 + "; the default is " + MetadataVersion.LATEST_PRODUCTION)
+                        MetadataVersion.MINIMUM_VERSION + "; the default is " + MetadataVersion.LATEST_PRODUCTION)
                 .action(store());
     }
 
@@ -240,7 +239,7 @@ public class FeatureCommand {
     }
 
     static String metadataVersionsToString(MetadataVersion first, MetadataVersion last) {
-        List<MetadataVersion> versions = Arrays.asList(MetadataVersion.VERSIONS).subList(first.ordinal(), last.ordinal() + 1);
+        List<MetadataVersion> versions = List.of(MetadataVersion.VERSIONS).subList(first.ordinal(), last.ordinal() + 1);
         return versions.stream()
                 .map(String::valueOf)
                 .collect(Collectors.joining(", "));
@@ -298,7 +297,7 @@ public class FeatureCommand {
             } catch (Throwable e) {
                 throw new TerseException("Unknown metadata.version " + releaseVersion +
                         ". Supported metadata.version are " + metadataVersionsToString(
-                        MetadataVersion.MINIMUM_BOOTSTRAP_VERSION, MetadataVersion.latestProduction()));
+                        MetadataVersion.MINIMUM_VERSION, MetadataVersion.latestProduction()));
             }
             try {
                 for (Feature feature : Feature.PRODUCTION_FEATURES) {
@@ -320,7 +319,7 @@ public class FeatureCommand {
                 } catch (Throwable e) {
                     throw new TerseException("Unknown metadata.version " + metadata +
                             ". Supported metadata.version are " + metadataVersionsToString(
-                            MetadataVersion.MINIMUM_BOOTSTRAP_VERSION, MetadataVersion.latestProduction()));
+                            MetadataVersion.MINIMUM_VERSION, MetadataVersion.latestProduction()));
                 }
                 updates.put(MetadataVersion.FEATURE_NAME, new FeatureUpdate(metadataVersion.featureLevel(), upgradeType));
             }
@@ -373,8 +372,8 @@ public class FeatureCommand {
             }
         } catch (IllegalArgumentException e) {
             throw new TerseException("Unknown release version '" + releaseVersion + "'." +
-                " Supported versions are: " + MetadataVersion.MINIMUM_BOOTSTRAP_VERSION +
-                " to " + MetadataVersion.LATEST_PRODUCTION);
+                " Supported versions are: " + MetadataVersion.MINIMUM_VERSION +
+                " to " + MetadataVersion.latestTesting().version());
         }
     }
 
